--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 /*Add styling to body*/
 /*Clear body styling*/
 
+/*Clear default styling applied by the web*/
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
