Declare CSS colour variables

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,14 @@
     text-decoration: none;
 }
 
+/*Declare CSS colour variables
+these are easier to use than actual values*/
+:root {
+    --color-bg: #1f1f38;
+    --color-bg-variant: #2c2c62c;
+    --color-primary: #4db5ff;
+    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-white: #fff
+    --color-light: rgba(255, 255, 255, 0.6);
+}
+
