--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,10 @@ these are easier to use than actual values*/
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff
     --color-light: rgba(255, 255, 255, 0.6);
+
+    /*Add CSS variables for the container class*/
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
 }
 
