--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ these are easier to use than actual values*/
     --color-bg-variant: #2c2c62c;
     --color-primary: #4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
-    --color-white: #fff
+    --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
     /*Add CSS variables for the container class*/
@@ -39,6 +39,9 @@ html {
 }
 
 /*Add styling to body*/
+/*Add background color and text colour using variabled declared earlier*/
 body {
     font-family: 'Poppins', sans-serif;
+    background: var(--color-bg);
+    color: var(--color-white);
 }
