--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,15 @@ a {
 a:hover {
     color: var(--color-white);
 }
+
+/*Style button class*/
+.btn {
+    width: max-content;
+    display: inline-block;
+    color: var(--color-primary);
+    padding: 0.75rem 1.2rem; /*First is top bottom and second is left right*/
+    border-radius: 0.4rem;
+    cursor: pointer;
+    border: 1px solid var(--color-primary);
+    transition: var(--transition);
+}
