Style header__socials icons

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -21,3 +21,16 @@ header {
     gap: 1.2rem;
     justify-content: center;
 }
+
+/* ========================= HEADER SOCIALS ======================== */
+
+/*Style header__socials icons*/
+.header__socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8rem;
+    position: absolute;
+    left: 0;
+    bottom: 3rem;
+}
