Add a line after the icons

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -34,3 +34,11 @@ header {
     left: 0;
     bottom: 3rem;
 }
+
+/*Add a line after the icons*/
+.header__socials::after {
+    content: '';
+    width: 1px;
+    height: 2rem;
+    background: var(--color-primary);
+}
