Removed comma in margin for container class

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body {
 /*Add margin to container class*/
 /*Apply container width*/
 .container {
-    margin: 0, auto;
+    margin: 0 auto;
     width: var(--container-width-lg);
 }
 
