styled my__img some more

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -48,12 +48,12 @@ header {
 /*Style the image*/
 .my__img {
     background: linear-gradient(var(--color-primary), transparent);
-    width: 22rem;
-    height: 30rem;
+    width: 20rem;
+    height: 20rem;
     position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
+    left: calc(50% - 10rem);
+    margin-top: 2rem;
+    border-radius: 50%;
     overflow: hidden;
     padding: 2rem 1.5rem 1.5rem 1.5rem;
 }
