--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -69,3 +69,27 @@ header {
     font-weight: 300;
     font-size: 0.9rem;
 }
+
+/*Add media queries for responsiveness*/
+
+/* ========================= MEDIA QUERIES (MEDIUM DEVICES) ======================== */
+
+@media screen and (max-width: 1024px) {
+    header {
+        height: 68vh;
+    }
+    
+}
+
+/* ========================= MEDIA QUERIES (SMALL DEVICES) ======================== */
+
+@media screen and (max-width: 600px) {
+    header {
+        height: 100vh;
+    }
+
+    .header__socials, .scroll__down {
+        display: none;
+    }
+    
+}
