--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -29,3 +29,9 @@ nav a {
 nav a:hover {
     background: rgba(0, 0, 0, 0.3);
 }
+
+/*Create active class*/
+nav a.active {
+    background: var(--color-bg);
+    color: var(--color-white);
+}
