--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -27,3 +27,10 @@
 .about__me-image:hover {
     transform: rotate(0);
 }
+
+/*Style about__cards*/
+.about__cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+}
