--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 these are easier to use than actual values*/
 :root {
     --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c62c;
+    --color-bg-variant: #2b2baf;
     --color-primary: #4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
