--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -51,3 +51,10 @@
     border-color: var(--color-primary-variant);
     cursor: default;
 }
+
+/*Style icons*/
+.about__icon {
+    color: var(--color-primary);
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+}
