--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -58,6 +58,16 @@ header {
     padding: 2rem 1.5rem 1.5rem 1.5rem;
 }
 
+/* ========================= CTA ======================== */
+
+/*Style cta class buttons*/
+.cta_2 {
+    margin-top: 23rem;
+    display: flex;
+    gap: 1.2rem;
+    justify-content: center;
+}
+
 /* ========================= SCROLL DOWN ======================== */
 
 /*Style Scroll down*/
