--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -52,7 +52,7 @@ header {
     height: 16rem;
     position: absolute;
     left: calc(50% - 8rem);
-    margin-top: 3rem;
+    margin-top: 2.5rem;
     border-radius: 50%;
     overflow: hidden;
     padding: 2rem 1.5rem 1.5rem 1.5rem;
@@ -61,8 +61,8 @@ header {
 /* ========================= CTA ======================== */
 
 /*Style cta class buttons*/
-.cta_2 {
-    margin-top: 23rem;
+.cta__2 {
+    margin-top: 21rem;
     display: flex;
     gap: 1.2rem;
     justify-content: center;
