Add hover effect to cards

--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -13,3 +13,10 @@
     border: 1px solid transparent;
 
 }
+
+/*Add hover effect to cards*/
+.experience__container > div:hover {
+    background: transparent;
+    border-color: var(--color-primary-variant);
+    cursor: default;
+}
