--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -27,3 +27,16 @@
     margin-bottom: 2rem;
     color: var(--color-primary);
 }
+
+/*Style experience__content*/
+.experience__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
+}
+
+/*Style articles*/
+.experience_details {
+    display: flex;
+    gap: 1rem;
+}
