--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -8,7 +8,7 @@
 /*Style the direct divs inside experience__container*/
 .experience__container > div {
     background: var(--color-bg-variant);
-    padding: 2rem 5rem;
+    padding: 2rem 4rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
@@ -26,13 +26,16 @@
     text-align: center;
     margin-bottom: 2rem;
     color: var(--color-primary);
+    font-size: 0.75rem;
 }
 
 /*Style experience__content*/
 .experience__content {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 2rem;
     row-gap: 2rem;
+    font-size: 0.75rem;
 }
 
 /*Style articles*/
