--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -43,3 +43,9 @@
     display: flex;
     gap: 1rem;
 }
+
+/*Style icons*/
+.experience__details-icons {
+    margin-top: 6px;
+    color: var(--color-primary);
+}
