Add hover effect to service

--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -13,3 +13,10 @@
     height: fit-content;
     transition: var(--transition);
 }
+
+/*Add hover effect to service*/
+.service:hover {
+    background: transparent;
+    border-color: var(--color-primary-variant);
+    cursor: default;
+}
