--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -20,3 +20,11 @@
     border-color: var(--color-primary-variant);
     cursor: default;
 }
+
+/*Style service__head*/
+.service__head {
+    background: var(--color-primary);
+    padding: 2rem;
+    border-radius: 0 0 2rem 2rem;
+    box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
+}
