--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -28,3 +28,10 @@
     border-radius: 0 0 2rem 2rem;
     box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
 }
+
+/*Style h3 tag inside service__head*/
+.service__head h3 {
+    color: var(--color-bg);
+    font-size: 1rem;
+    text-align: center;
+}
