--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -13,3 +13,9 @@
     border: 1px solid transparent;
     transition: var(--transition);
 }
+
+/*Add hover effect to prtfolio__item*/
+.portfolio__item:hover {
+    border-color: var(--color-primary-variant);
+    background: transparent;
+}
