--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -19,3 +19,9 @@
     border-color: var(--color-primary-variant);
     background: transparent;
 }
+
+/*Style image*/
+.portfolio__item-image {
+    border-radius: 1.5rem;
+    overflow: hidden;
+}
