--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -38,3 +38,25 @@
     margin-bottom: 1rem;
 
 }
+
+/*Add media queries for responsiveness on smaller devices*/
+
+/* ========================= MEDIA QUERIES (MEDIUM DEVICES) ======================== */
+
+@media screen and (max-width: 1024px) {
+    .portfolio__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem;
+    }
+    
+ }
+ 
+ /* ========================= MEDIA QUERIES (SMALL DEVICES) ======================== */
+ 
+ @media screen and (max-width: 600px) {
+     .portfolio__container {
+         grid-template-columns: 1fr;
+         gap: 1rem;
+     }
+    
+ }
