Style client__review

--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -21,3 +21,12 @@
     border-radius: 2rem;
     user-select: none;
 }
+
+/*Style client__review*/
+.client__review {
+    color: var(--color-light);
+    font-weight: 300;
+    display: block;
+    width: 80%;
+    margin: 0.8rem auto 0;
+}
