--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -30,3 +30,26 @@
     width: 80%;
     margin: 0.8rem auto 0;
 }
+
+/*Add media queries for responsiveness on smaller devices*/
+
+/* ========================= MEDIA QUERIES (MEDIUM DEVICES) ======================== */
+
+@media screen and (max-width: 1024px) {
+    .testimonials__container {
+        width: 60%;
+    }
+ }
+ 
+ /* ========================= MEDIA QUERIES (SMALL DEVICES) ======================== */
+ 
+ @media screen and (max-width: 600px) {
+     .testimonials__container {
+         width: var(--container-width-sm);
+     }
+
+     .client__review {
+         width: var(--container-width-sm);
+     }
+     
+ }
