Added padding bottom to container

--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -1,6 +1,8 @@
 /*Style testimonials__container*/
 .testimonials__container {
     width: 40%;
+    padding-bottom: 4rem;
+
 }
 
 /*Style client__avatar*/
