--- a/src/Components/Contacts/Contacts.css
+++ b/src/Components/Contacts/Contacts.css
@@ -5,3 +5,10 @@
     grid-template-columns: 30% 58%;
     gap: 12%;
 }
+
+/*Style contacts__options*/
+.contacts__options {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
