Style contact__option

--- a/src/Components/Contacts/Contacts.css
+++ b/src/Components/Contacts/Contacts.css
@@ -12,3 +12,13 @@
     flex-direction: column;
     gap: 1.2rem;
 }
+
+/*Style contact__option*/
+.contact__option {
+    background: var(--color-bg-variant);
+    padding: 1.2rem;
+    border-radius: 1.2rem;
+    text-align: center;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
