--- a/src/Components/Contacts/Contacts.css
+++ b/src/Components/Contacts/Contacts.css
@@ -39,5 +39,14 @@
 .contact__option a {
     margin-top: 0.7rem;
     display: inline-block;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
+}
+
+/* ====================== Form =================== */
+
+/*Style form*/
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
 }
