--- a/src/Components/Contacts/Contacts.css
+++ b/src/Components/Contacts/Contacts.css
@@ -61,3 +61,24 @@ input, textarea {
     resize: none;
     color: var(--color-white);
 }
+
+/*Add media queries for responsiveness on smaller devices*/
+
+/* ========================= MEDIA QUERIES (MEDIUM DEVICES) ======================== */
+
+@media screen and (max-width: 1024px) {
+    .container.contacts__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+   
+ }
+ 
+ /* ========================= MEDIA QUERIES (SMALL DEVICES) ======================== */
+ 
+ @media screen and (max-width: 600px) {
+    .container.contacts__container {
+       width: var(--container-width-sm);
+    }
+     
+ }
