--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -32,6 +32,6 @@ nav a:hover {
 
 /*Create active class*/
 nav a.active {
-    background: var(--color-bg);
-    color: var(--color-white);
+    background: var(--color-primary);
+    color: var(--color-bg);
 }
